# thumbnail-animator

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  canvas-grid.js  clip-inference-worker.js  clip-pool.js  clip-preprocess-pool.js  clip-preprocess-worker.js  clip-worker.js  collections.js  command-palette.js  context-menu.js  convert-dialog.js  database-proxy.js  database-worker.js  database.js  dimension-worker.js  duplicate-detection.js  filmstrip-scrubber.js  filter-sort-helpers.js  filter-sort-worker.js  filter-worker-bridge.js  fuse.vendor.js  gif-duration-parser.js  gifuct-js-bundle.js  hash-pool.js  hash-worker.js  icons.js  image-decode-worker.js  index.html  ipc-result.js  lightbox.js  main-utils.js  main.js  package-lock.json  package.json  perf-dashboard.js  playback-controller.js  (+14 more)
.claude/: settings.local.json
.github/workflows/: release.yml
native-scanner/: Cargo.toml  package-lock.json  package.json
native-scanner/src/: gpu_probe.onnx  lib.rs  win.rs
plugins/: plugin-api.js  plugin-registry.js
plugins/builtin/comfyui-workflow/: index.js  plugin.json
plugins/builtin/exif-metadata/: index.js  plugin.json
plugins/builtin/exif-stripper/: index.js  plugin.json
test/: command-palette.test.js  database-proxy.test.js  database.test.js  filmstrip-scrubber.test.js  filter-sort-helpers.test.js  filter-sort-worker.test.js  gif-duration-parser.test.js  hash-pool.test.js  ipc-result.test.js  main-utils.test.js  mock-worker-threads.js  playback-controller.test.js  plugin-api.test.js  plugin-registry.test.js  setup-db-alias.js  themes.test.js
(+6 files in other folders)
