[package]
name = "native-scanner"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi4"] }
napi-derive = "2"
blake3 = "1"
rayon = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
opt-level = 3
