[package]
name = "native-scanner"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi4"] }
napi-derive = "2"
blake3 = "1"
rayon = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp"] }
ort = { version = "=2.0.0-rc.10", features = ["download-binaries", "ndarray"] }
ndarray = "0.16"
once_cell = "1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
opt-level = 3
